# aegis-health-chain

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-full.yml  ci.yml
docs/: api_reference.md  use_cases.md
fhir/: profiles.fsh
fhir/examples/: example-forecast.json
notebooks/: 00_colab_setup.ipynb  01_run_full_tests_colab.ipynb
src/: __init__.py  data_pipeline.py  healthcare_standards.py  hl7v2_converter.py  huggingface_models.py  udm_mapper.py  udm_mapper_enhanced.py
tests/: test_healthcare_standards.py  test_hl7v2_converter.py  test_models.py  test_udm.py  test_udm_mapper_enhanced.py
